Finished setting up folders

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "weather-journal-app-12-18-2019",
   "version": "1.0.0",
   "description": "Weather app that searches by zip code and takes in emotions of user",
-  "main": "src/server2.js",
+  "main": "src/server/server.js",
   "scripts": {
-    "start": "node src/server2",
-    "dev": "nodemon src/server2"
+    "start": "node src/server/server",
+    "dev": "nodemon src/server/server"
   },
   "keywords": [
     "weather",
